--- a/bootstrap.css
+++ b/bootstrap.css
@@ -4,7 +4,7 @@ p {
 }
 
 body {
-    background-image: url("https://img.freepik.com/premium-photo/grey-abstract-background_427757-34.jpg");
+    background-image: url("https://htmlcolorcodes.com/assets/images/colors/pastel-red-color-solid-background-1920x1080.png");
 }
 
 
