--- a/about2.css
+++ b/about2.css
@@ -1,8 +1,29 @@
 body {
-    background-color: #d95d5d;
-    font-family: Arial, sans-serif;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #FF0000;
 }
 
+.navbar {
+    overflow: hidden;
+
+}
+
+.navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.navbar a:hover {
+    color: red;
+    background-color: white;
+    padding: auto;
+    border-radius: 10px;
+}
 
 .social-icons a {
     display: inline-block;
@@ -11,17 +32,16 @@ body {
     font-size: 24px;
     transition: color 0.3s ease;
 }
+
 .navbar-brand {
     color: darkorchid;
     font-size: 24px;
 }
 
-
-
 .container {
     background-color: #fff;
     padding: 20px;
-    border-radius: 5px;
+    border-radius: 15px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
